<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TP-Android---LDP4</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenido">Bienvenido al mundo de las apuestas</string>
    <string name="titulo_programa">La ruleta</string>
    <string name="usuario">Ingrese su nombre</string>
    <string name="tipo_de_conexion">El tipo de su conexion es:</string>
    <string name="tipo_de_conexion_datos">Datos moviles</string>
    <string name="tipo_de_conexion_wifi">Wifi</string>
    <string name="tipo_de_conexion_sin_conexion">Sin conexion</string>
    <string name="sugerirNumero">Sugerir Número</string>
    <string name="jugar">Jugar</string>
    <string name="title_activity_juego">juego</string>
    <string name="indicacion">Ingrese sus números:</string>
    <string name="primerNumero">Primer Número:</string>
    <string name="segundoNumero">Segundo Número:</string>
    <string name="tercerNumero">Tercer Número:</string>
    <string name="cuartoNumero">Cuarto Número:</string>
    <string name="quintoNumero">Quinto Número:</string>
    <string name="sextoNumero">Sexto Número:</string>
    <string name="btnJugar">Jugar</string>
    <string name="revisarNumeros">Revise lo números ingresados</string>
    <string name="revisarRangoNumeros">Los números deben estar entre 0 y 36</string>
    <string name="revisarRepeticionNumeros">Los números no pueden repetirse</string>
    <string name="errorNoIngresoUsuario">Ingrese su nombre de usuario</string>
    <string name="numeroSugerido">Número sugerido:</string>
    <string name="felicidades">Felicitaciones</string>
    <string name="gano">Ganaste! acertaste a</string>
    <string name="numeros">números</string>
    <string name="perdio">Perdiste. No acertaste a ningún número.</string>


</resources>
