<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context="com.avase.tp_android___ldp4.juego">

    <Space
        android:layout_width="1dp"
        android:layout_height="40dp" />
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_indicacion"
        android:text="@string/indicacion"
        android:layout_weight="1" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primerNumero"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:editable="true"
            android:maxLength="1"
            android:ems="10"
            android:id="@+id/txt_primerNumero"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segundoNumero"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:editable="true"
            android:maxLength="1"
            android:ems="10"
            android:id="@+id/txt_segundoNumero"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tercerNumero"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:editable="true"
            android:maxLength="1"
            android:ems="10"
            android:id="@+id/txt_tercerNumero"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuartoNumero"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:editable="true"
            android:maxLength="1"
            android:ems="10"
            android:id="@+id/txt_cuartoNumero"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quintoNumero"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:editable="true"
            android:maxLength="1"
            android:ems="10"
            android:id="@+id/txt_quintoNumero"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sextoNumero"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:editable="true"
            android:maxLength="1"
            android:ems="10"
            android:id="@+id/txt_sextoNumero"
            android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnJugar"
            android:id="@+id/btn_jugar"/>

    </LinearLayout>

</LinearLayout>
